fix new-format-color-picker label apearing covered/overlapping when in an open/active state

--- a/core/assets/layers-customizer.css
+++ b/core/assets/layers-customizer.css
@@ -1050,6 +1050,16 @@ div[id*='layers-widget'] .widget-control-actions .alignright{
 	        margin-top: -18px;
 	        position: relative;
 	    }
+	    	
+	    	/*------------------------------------*/
+			/*- COLOR PICKER OPEN ----------------*/
+	    	.layers-design-bar-form-item .wp-picker-container.wp-picker-active {
+				margin-top: 25px;
+			}
+			.layers-design-bar-form-item .wp-picker-container.wp-picker-active .wp-color-result{
+				position: relative;
+				top: 3px;
+			}
 
 	    /*------------------------------------*/
 		/*- CUSTOM ICONS ---------------------*/
